to do list text edit기능 추가

--- a/index.html
+++ b/index.html
@@ -8,13 +8,6 @@
     <script src="script.js" defer></script>
   </head>
   <body>
-    <!-- 
-        1. 로고부분 
-        2. input창에 입력해서 추가할수있는 기능
-        3. list 현황
-        4. list를 삭제할수있는 기능
-        -->
-
     <main class="main-container">
       <div class="background-blobs">
         <div class="blob blob-1"></div>
@@ -32,14 +25,7 @@
 
         <div class="list-container">
           <ul class="to-do-list">
-            <!-- <li class="item">
-              <label class="custom-checkbox">
-                <input type="checkbox" />
-                <span class="checkmark"></span>
-                <span class="todo-text"></span>
-              </label>
-              <button class="todo-del">X</button>
-            </li> -->
+            <!-- 데이터 -->
           </ul>
         </div>
         <div class="controller">
