--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
       </div>
       <header class="main-header">
         <h1>To do List</h1>
+        <div class="theme-toggle">
+          <button class="dark-mode-btn">☀️ Light Mode</button>
+        </div>
       </header>
 
       <div class="contents">
